# jonbuntu

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  locations.json.example  main.py  pyproject.toml
deploy/: Makefile
deploy/nginx/: jonbuntu  jonbuntu.conf
deploy/oauth2-proxy/: home.jonkanon.com.cfg  oauth2-jonkanon.service
deploy/scripts/create_route/: pyproject.toml
deploy/scripts/create_route/src/create_route/: .null-ls_404301_main.py  main.py
deploy/scripts/route53/: pyproject.toml  route53.py  run_route53.sh  tools.py
deploy/systemd/: route53-update.service  route53-update.timer
fastapi_service/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
fastapi_service/src/: config.py  espen.py  main.py  utils.py  xplora_fetcher.py
fastapi_service/src/static/css/: espen.css  map.css  maria.css
fastapi_service/src/static/js/: espen.js  map.js  maria.js
fastapi_service/src/templates/: espen.html  map.html  maria.html
src/: config.py  main.py
src/static/css/: map.css
src/static/js/: map.js
src/templates/: map.html
